# varlinkfmt

./: Cargo.toml  LICENSE  README.md  varlink.scm
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
src/: lib.rs  main.rs
varlinkfmt-core/: Cargo.toml  varlink.scm
varlinkfmt-core/src/: lib.rs
