[dependencies]
clap = { version = "4", features = ["derive"] }
varlinkfmt-core = { path = "varlinkfmt-core", version = "0.2.0" }

[workspace]
members = ["varlinkfmt-core"]

[workspace.package]
authors = ["Pascal Bachor"]
edition = "2024"
keywords = ["varlink", "formatter", "tree-sitter", "topiary"]
license = "MIT"
repository = "https://github.com/bachorp/varlinkfmt"
version = "0.2.0"

[package]
authors.workspace = true
categories = ["development-tools", "command-line-utilities"]
description = "Formatter for Varlink (CLI tool)"
edition.workspace = true
include = ["/src/*"]
keywords.workspace = true
license.workspace = true
name = "varlinkfmt"
readme = "README.md"
repository.workspace = true
version.workspace = true
